--- a/templates/home.html
+++ b/templates/home.html
@@ -7,16 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/home">Home</a>
+    <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
+  <ul class="navbar-nav" >
+    <li class="nav-item" >
+      <a class="nav-link"  href="/home">Home</a>
     </li>
       <li class="nav-item">
       <a class="nav-link" href="/logout">logout</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/add_product">Add Product</a>
     </li>
       <li class="nav-item">
       <a class="nav-link" href="/view_cart">Cart</a>
